<resources>
    <string name="app_name">Interval Training Timer</string>

    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="select_history">Select from your history</string>
    <string name="create_new">Create a new workout</string>
    <string name="finished">finished</string>
    <string name="start_again">start again</string>
    <string name="review">Review Workout</string>
    <string name="exercise_name">exercise name</string>
    <string name="time">time</string>
    <string name="current_set">current set</string>
    <string name="exercise_name_hint">Please provide a exercise name</string>
    <string name="set_number">No of sets</string>
    <string name="workout_name_hint">Provide a workout name</string>
    <string name="edit">edit</string>
    <string name="pick_number_for">pick number for</string>
    <string name="exercises_title">No of exercises and rest</string>
    <string name="sets_title">No of sets</string>
    <string name="exercise_number">exercise number</string>
    <string name="pick_time_for">pick time for</string>
    <string name="pick_time_title">pick time</string>
    <string name="create_exercise_title">Create exercise</string>
    <string name="edit_exercise_title">Edit your exercise</string>
    <string name="workout_model">workout model</string>
    <string name="list_position">list position</string>
    <string name="exercise_empty_error">Please provide a exercise name</string>
    <string name="from_notification">from notification</string>
    <string name="workout_name">workout name</string>
    <string name="current_count">current count</string>
    <string name="timer_state">timer state</string>
    <string name="current_exercise_time">current exercise time</string>
    <string name="timer_running">timer running</string>
    <string name="from_info_bar">from info bar</string>
    <string name="how_to_lay">how to lay</string>
    <string name="from_action_button">action button</string>
    <string name="from_review_fragment">from review fragment</string>
    <string name="from_recent_apps">from recent apps</string>
</resources>
